--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 
+<html>
+  <title>
+    NCKY MSI
+  </title>
+  
+  <body>
+    <h1>Welcome to my first github website.</h1>
+  </body>
+  
+  <style>
+    body{
+      background-color:white;
+      color:#fffff
+       text-align:center;
+    }
+  </style>
+  
+</html>
