--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style>
     body{
       background-color:white;
-      color:#fffff
+      color:#fffff;
        text-align:center;
     }
   </style>
